# unified-search-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/search/: server.py
tests/: test_search.py
